# calypsonet-terminal-card-cpp-api

./: .gitignore  CMakeLists.txt  CMakeLists.txt.googletest  CMakeLists.txt.in  CNAME  CONTRIBUTING.md  NOTICE.md  PUBLISHERS.yml  README.md  _config.yml  list_versions.md
.github/doxygen/: Doxyfile
.github/scripts/: check_version.sh  patch_doxyfile.sh  prepare_doxygen.sh
.github/workflows/: publish-doc-release.yml  publish-doc-snapshot.yml  publish-doc.yml
1.0.0/: _abstract_apdu_exception_8h.html  _abstract_apdu_exception_8h__incl.md5  _abstract_apdu_exception_8h_source.html  _apdu_request_spi_8h.html  _apdu_request_spi_8h__dep__incl.md5  _apdu_request_spi_8h__incl.md5  _apdu_request_spi_8h_source.html  _apdu_response_api_8h.html  _apdu_response_api_8h__dep__incl.md5  _apdu_response_api_8h__incl.map  _apdu_response_api_8h__incl.md5  _apdu_response_api_8h_source.html  _card_api_properties_8h.html  _card_api_properties_8h_source.html  _card_broken_communication_exception_8h.html  _card_broken_communication_exception_8h__incl.map  _card_broken_communication_exception_8h_source.html  _card_request_spi_8h.html  _card_request_spi_8h__incl.md5  _card_request_spi_8h_source.html  _card_response_api_8h.html  _card_response_api_8h__dep__incl.map  _card_response_api_8h__dep__incl.md5  _card_response_api_8h__incl.map  _card_response_api_8h_source.html  _card_selection_request_spi_8h.html  _card_selection_request_spi_8h__incl.md5  _card_selection_request_spi_8h_source.html  _card_selection_response_api_8h.html  _card_selection_response_api_8h_source.html  _card_selection_spi_8h.html  _card_selection_spi_8h__incl.md5  _card_selection_spi_8h_source.html  _card_selector_spi_8h.html  _card_selector_spi_8h__incl.map  _card_selector_spi_8h__incl.md5  _card_selector_spi_8h_source.html  _channel_control_8h.html  _channel_control_8h__dep__incl.md5  _channel_control_8h_source.html  (+84 more)
1.0.0-SNAPSHOT/: _abstract_apdu_exception_8h__dep__incl.map  _abstract_apdu_exception_8h__dep__incl.md5  _abstract_apdu_exception_8h__incl.map  _apdu_request_spi_8h__dep__incl.map  _apdu_request_spi_8h__incl.map  _apdu_request_spi_8h_source.html  _apdu_response_api_8h__dep__incl.map  _card_api_properties_8h.html  _card_api_properties_8h__incl.map  _card_api_properties_8h__incl.md5  _card_broken_communication_exception_8h__incl.md5  _card_request_spi_8h.html  _card_request_spi_8h__dep__incl.map  _card_request_spi_8h__dep__incl.md5  _card_request_spi_8h__incl.map  _card_request_spi_8h_source.html  _card_response_api_8h.html  _card_response_api_8h__incl.md5  _card_response_api_8h_source.html  _card_selection_request_spi_8h.html  _card_selection_request_spi_8h__dep__incl.map  _card_selection_request_spi_8h__dep__incl.md5  _card_selection_request_spi_8h__incl.map  _card_selection_response_api_8h.html  _card_selection_response_api_8h__dep__incl.map  _card_selection_response_api_8h__dep__incl.md5  _card_selection_response_api_8h__incl.map  _card_selection_response_api_8h__incl.md5  _card_selection_response_api_8h_source.html  _card_selection_spi_8h.html  _card_selection_spi_8h__incl.map  _card_selector_spi_8h.html  _card_selector_spi_8h__dep__incl.map  _card_selector_spi_8h__dep__incl.md5  _channel_control_8h__dep__incl.map  _channel_control_8h_source.html  _parse_exception_8h__incl.map  _parse_exception_8h__incl.md5  _parse_exception_8h_source.html  _proxy_reader_api_8h__incl.map  (+52 more)
1.0.0-SNAPSHOT/search/: all_0.js  all_3.js  all_6.js  all_8.js  all_b.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  enumvalues_1.js  enumvalues_3.js  files_1.js  files_3.js  files_4.js  files_5.js  functions_1.js  functions_6.js  related_0.js  searchdata.js
1.0.0/search/: all_1.js  all_2.js  all_4.js  all_a.js  all_c.js  all_e.js  classes_2.js  classes_4.js  classes_5.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_5.js  files_0.js  files_2.js  functions_0.js  functions_2.js  functions_4.js  functions_5.js  functions_7.js  functions_9.js  namespaces_0.js  related_0.js
src/: CMakeLists.txt
src/main/: AbstractApduException.h  ApduResponseApi.h  CMakeLists.txt  CardApiProperties.h  CardBrokenCommunicationException.h  CardResponseApi.h  CardSelectionResponseApi.h  ChannelControl.h  ProxyReaderApi.h  ReaderBrokenCommunicationException.h  UnexpectedStatusWordException.h
src/main/spi/: ApduRequestSpi.h  CardRequestSpi.h  CardSelectionRequestSpi.h  CardSelectionSpi.h  CardSelectorSpi.h  ParseException.h  SmartCardSpi.h
src/test/: CMakeLists.txt  CMakeLists.txt.in  CardApiPropertiesTest.cpp  MainTest.cpp
toolchain/: arm-unknown-gnueabi-linux.cmake  clang-8-linux.cmake  clang-9-linux.cmake  clang-linux.cmake  clang-macos.cmake  clang-windows.cmake  gcc-10-linux.cmake  gcc-4.8.3-linux.cmake  gcc-8-linux.cmake  gcc-9-linux.cmake  gcc-linux.cmake  ios-macos.cmake
